--- a/twin_scape/templates/admin/index.html
+++ b/twin_scape/templates/admin/index.html
@@ -1,5 +1,6 @@
 {% extends 'unfold/layouts/base.html' %}
 {% load i18n unfold %}
+{% comment %} {% load replace %} {% endcomment %}
 
 {% block breadcrumbs %}{% endblock %}
 
@@ -105,11 +106,11 @@
                             <th class="px-4 py-2 text-left">Titolo</th>
                             <th class="px-4 py-2 text-left md:table-cell mobile-hidden">Descrizione</th>
                             <th class="px-4 py-2 text-left lg:table-cell mobile-hidden">Data di Creazione</th>
+                            <th class="px-4 py-2 text-left">User</th>
                             <th class="px-4 py-2 text-left lg:table-cell mobile-hidden">Tag</th>
                             <th class="px-4 py-2 text-left">Stato</th>
                             <th class="px-4 py-2 text-left md:table-cell mobile-hidden">Immagini</th>
                             <th class="px-4 py-2 text-left">Azioni</th>
-                            <th class="px-4 py-2 text-left">User</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -124,6 +125,14 @@
                                     
                                     <td data-label="Data" class="px-4 py-2 border-b lg:table-cell mobile-hidden">
                                         {{ lesson.creation_time|date:"Y-m-d H:i" }}
+                                    </td>
+
+                                    <td data-label="creator" class="px-4 py-2 border-b lg:table-cell mobile-hidden">
+                                        {% if lesson.user %}
+                                            {{lessons.user}}
+                                        {% else %}
+                                            N/A
+                                        {% endif %}
                                     </td>
                                     
                                     <td data-label="Tag" class="px-4 py-2 border-b lg:table-cell mobile-hidden">
@@ -162,7 +171,7 @@
                                                 </form>
                                             {% endif %}
                                             
-                                            {% if lesson.status == "BUILDED" %}
+                                            {% if lesson.status == "BUILT" %}
                                                 <div class="flex flex-col md:flex-row gap-2">
                                                     <form method="post" action="#" class="w-full">
                                                         {% csrf_token %}
@@ -185,13 +194,6 @@
                                                 </div>
                                             {% endif %}
                                         </div>
-                                    </td>
-                                    <td data-label="aaaa" class="px-4 py-2 border-b md:table-cell mobile-hidden">
-                                        {% if lesson.user %}
-                                            <img src="{{ lesson.user }}" alt="{{ lesson.user }}" class="w-16 h-16 object-cover rounded">
-                                        {% else %}
-                                            N/A
-                                        {% endif %}
                                     </td>
                                 </tr>
                             {% endif %}
